--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
+	* libgimpthumb/gimpthumbnail.[ch]: added thumb_size variable to
+	the GimpThumbnail struct. Fixed handling of failed thumbnails.
+
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
 	* libgimpthumb/gimpthumbnail.c (gimp_thumbnail_set_uri): added
 	missing casts to gint64.
 
