--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimptemplateeditor.c: cosmetic.
+
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.[ch]: added thumb_size variable to
