--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-01-02  Marco Ciampa  <ciampix@libero.it>
 
 	* it.po: Updated italian translation.
