--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/png.c: use a global parasite to store the default
+	values. Such uglyness doesn't belong into gimprc.
+
+	* devel-docs/parasites.txt: document the parasite used by the PNG
+	plug-in.
+
 2004-01-06  Michael Natterer  <mitch@gimp.org>
 
 	* app/widgets/gimptemplateeditor.c: cosmetic.
