2004-01-06  Sven Neumann  <sven@gimp.org>
	* tools/pdbgen/pdb/gimprc.pdb: use gimp->config; edit_config is
	just for the prefs dialog. This should fix gimp_gimprc_set().

	* app/pdb/gimprc_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11911 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
+	* tools/pdbgen/pdb/gimprc.pdb: use gimp->config; edit_config is
+	just for the prefs dialog. This should fix gimp_gimprc_set().
+
+	* app/pdb/gimprc_cmds.c: regenerated.
+
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/png.c: use a global parasite to store the default
 	values. Such uglyness doesn't belong into gimprc.
 
