--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-06  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/tmpl/gimpenums.sgml: regenerated.
+
 2004-01-05  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt: moved color_picker, blend and
