--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimagefile.c: invalidate the description string
+	before emitting "info_changed".
+	(gimp_imagefile_save_thumb): use the enum value's name. not it's
+	nick.
+
 2004-01-06  Michael Natterer  <mitch@gimp.org>
 
 	Enabled skipping enum values for either the PDB or GType
