--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-06  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/pygimp/plug-ins/sphere.py (python_sphere): use
+	gimp_edit_bucket_fill() and gimp_edit_blend() instead of
+	deprecated functions.
+
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumbnail.[ch]: added new function
