2004-01-06  Sven Neumann  <sven@gimp.org>
	* app/core/gimpimage-scale.c (gimp_image_scale_check): fixed inline
	docs.

2004-01-06  Sven Neumann  <sven@gimp.org>

	* app/app-sections.txt: updated.

	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/tmpl/gimpthumbnail.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11917 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
+	* app/core/gimpimage-scale.c (gimp_image_scale_check): fixed inline
+	docs.
+
 2004-01-06  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/pygimp/plug-ins/sphere.py (python_sphere): use
