2004-01-06  Sven Neumann  <sven@gimp.org>
	* libgimp/gimp.def
	* libgimpthumb/gimpthumb.def: updated. Patch from Michael Schumacher.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11919 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
+	* libgimp/gimp.def
+	* libgimpthumb/gimpthumb.def: updated. Patch from Michael Schumacher.
+
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
 	* app/core/gimpimage-scale.c (gimp_image_scale_check): fixed inline
 	docs.
 
