--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,5 +1,11 @@
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
+	* app/app.types: added gimp_dash_editor_get_type.
+
+	* app/app-docs.sgml: include xml/dasheditor.xml.
+
+2004-01-06  Sven Neumann  <sven@gimp.org>
+
 	* app/app-sections.txt: updated.
 
 	* libgimpthumb/libgimpthumb-sections.txt
