--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-07  Simon Budig  <simon@gimp.org>
+
+	* app/gui/about-dialog.c: Changed the string that is intended
+	to be translated to the translators names, to be the same as
+	in Gnome. Sorry for the string change.
+
 2004-01-06  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimp.def
