2004-01-07  Sven Neumann  <sven@gimp.org>
        * configure.in: set GIMP_VERSION to 2.0pre1.

        * HACKING
        * INSTALL
        * NEWS
        * README: updated and changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11923 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-07  Sven Neumann  <sven@gimp.org>
+
+	* configure.in: set GIMP_VERSION to 2.0pre1.
+
+	* HACKING
+	* INSTALL
+	* NEWS
+	* README: updated and changed accordingly.
+
 2004-01-07  Simon Budig  <simon@gimp.org>
 
 	* app/gui/about-dialog.c: Changed the string that is intended
