--- a/HACKING
+++ b/HACKING
@@ -5,7 +5,7 @@ to have the following packages (or newer versions) installed:
 
     * GNU autoconf 2.52
         - ftp://ftp.gnu.org/gnu/autoconf/
-    * GNU automake 1.6
+    * GNU automake 1.7  (1.6 will also work)
         - ftp://ftp.gnu.org/gnu/automake/
     * GNU libtool 1.3.4  (1.5.0 if you are compiling on Win32)
         - ftp://ftp.gnu.org/gnu/libtool/
@@ -13,10 +13,10 @@ to have the following packages (or newer versions) installed:
 Fine GNU mirrors are listed at http://www.gnu.org/prep/ftp.html
 Beta software can be found at alpha.gnu.org.
 
-    * pkg-config 0.7.0 (or a newer version)
+    * pkg-config 0.7.0 (or preferably a newer version)
         - http://www.freedesktop.org/software/pkgconfig/
 
-    * intltoolize 0.17 (or a newer version)
+    * intltoolize 0.17 (or preferably a newer version)
         - ftp://ftp.gnome.org/pub/gnome/sources/intltool/
 
 These are only the additional requirements if you want to compile from
