2004-01-07  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/gimprc.pdb: removed redundant "success = TRUE"
	assignments which simplifies the generated code quite a bit.
	(most of the changed functions always succeed and don't need a
	"success" variable at all)

	* app/pdb/gimprc_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11926 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-07  Michael Natterer  <mitch@gimp.org>
+
+	* tools/pdbgen/pdb/gimprc.pdb: removed redundant "success = TRUE"
+	assignments which simplifies the generated code quite a bit.
+	(most of the changed functions always succeed and don't need a
+	"success" variable at all)
+
+	* app/pdb/gimprc_cmds.c: regenerated.
+
 2004-01-07  Sven Neumann  <sven@gimp.org>
 
 	* Made 2.0pre1 release.
