--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumb.def: fixed wrong function name.
+
 2004-01-07  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/script-fu/scripts/beveled-pattern-heading.scm
