--- a/tips/ChangeLog
+++ b/tips/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-07  Pablo G. del Campo  <pablodc@bigfoot.com>
+
+        * es.po: Updated Spanish translation.
+
 2003-12-19  Sven Neumann  <sven@gimp.org>
 
 	* gimp_tips.hu.txt
