--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-07  Henrik Brix Andersen  <brix@gimp.org>
+
+	* app/core/gimpimage-contiguous-region.c
+	(find_contiguous_segment): applied a patch from Adrian Bunk
+	<bunk@fs.tum.de> which fixes a double ;; typo (bug #130828).
+
 2004-01-07  Sven Neumann  <sven@gimp.org>
 
 	* gimp-1.3.pc.in
