2004-01-07  Manish Singh  <yosh@gimp.org>
        * configure.in: AC_SUBST the EXIF vars, to workaround automake 1.6
        brokenness.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11936 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-07  Manish Singh  <yosh@gimp.org>
+
+	* configure.in: AC_SUBST the EXIF vars, to workaround automake 1.6
+	brokenness.
+
 2004-01-07  Simon Budig  <simon@gimp.org>
 
 	* app/base/curves.c: copy the positions of the control points
