--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-07  Henrik Brix Andersen  <brix@gimp.org>
+
+	* plug-ins/common/psd.c
+	* app/vectors/gimpvectors-import.c
+	* tools/pdbgen/pdb/gradients.pdb: removed more double semi-colons.
+
+	* app/pdb/gradients_cmds.c: regenerated.
+
 2004-01-07  Manish Singh  <yosh@gimp.org>
 
 	* configure.in: AC_SUBST the EXIF vars, to workaround automake 1.6
