--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-08  Henrik Brix Andersen  <brix@gimp.org>
+
+	* app/gui/preferences-dialog.c (prefs_dialog_new): moved Default
+	Image Grid to top level since it also applies to newly loaded
+	images without a grid.
+
 2004-01-07  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/common/psd.c
