--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-08  Jan Morén  <jan.moren@lucs.lu.se>
+
+	* sv.po: Updated Swedish translation.
+
 2004-01-07  Pablo G. del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
