2004-01-08  Manish Singh  <yosh@gimp.org>
        * tools/pdbgen/fileops.pdb: Add notes about menu path requirements
        for Load/Save handlers.

        * plug-ins/common/png.c: Document the behavior here too.

        * app/gui/file-open-menu.c
        * app/gui/file-save-menu.c: Robustify against NULL menu_path.

        * app/pdb/fileops_cmds.c
        * libgimp/gimpfileops_pdb.c: Regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11942 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2004-01-08  Manish Singh  <yosh@gimp.org>
+
+	* tools/pdbgen/fileops.pdb: Add notes about menu path requirements
+	for Load/Save handlers.
+
+	* plug-ins/common/png.c: Document the behavior here too.
+
+	* app/gui/file-open-menu.c
+	* app/gui/file-save-menu.c: Robustify against NULL menu_path.
+
+	* app/pdb/fileops_cmds.c
+	* libgimp/gimpfileops_pdb.c: Regenerated.
+
 2004-01-08  Henrik Brix Andersen  <brix@gimp.org>
 
 	* plug-ins/common/png.c (query): only expose
