--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Sven Neumann  <sven@gimp.org>
+
+	* es.po: added missing newlines (bug #130916) and fixed bad menu
+	translations.
+
 2004-01-08  Jan Morén  <jan.moren@lucs.lu.se>
 
 	* sv.po: Updated Swedish translation.
