2004-01-08  Dave Neary  <bolsh@gimp.org>
        * etc/templaterc: Add some templates for screen sizes, as i
        suggested in bug #130869.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11945 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-08  Dave Neary  <bolsh@gimp.org>
+
+	* etc/templaterc: Add some templates for screen sizes, as i
+	suggested in bug #130869.
+
 2004-01-08  Michael Natterer  <mitch@gimp.org>
 
 	* app/gui/layers-menu.c
