--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-09  Tor Lillqvist  <tml@iki.fi>
+
+	* plug-ins/winsnap/Makefile.am (winsnap-win32res.o): Don't try to
+	use the no longer included build/win32/compile-resource
+	script. Instead, run windres directly.
+
 2004-01-09  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped version number to 1.3.25, interface_age 1,
