--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Zdenko Podobny.
+
 2004-01-08  Sven Neumann  <sven@gimp.org>
 
 	* es.po: added missing newlines (bug #130916) and fixed bad menu
