Updated italian translation
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11954 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po-plug-ins/ChangeLog
+++ b/po-plug-ins/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Marco Ciampa  <ciampix@libero.it>ù
+
+	* it.po: Updated italian translation.
+	
 2004-01-09  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
 
 	* sk.po: Updated Slovak translation by Zdenko Podobny.
