--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Marco Ciampa <ciampix@libero.it>
+
+	* it.po: Updated italian translation
+
 2004-01-05  Marco Ciampa <ciampix@libero.it>
 
 	* it.po: Updated italian translation
