--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-01-09  Pablo G. del Campo  <pablodc@bigfoot.com>
 
 	* es.po: Updated Spanish translation.
